fix(VerificationProcess): maintain display alignment of process

--- a/src/components/organisms/VerificationModal/_components.verification-modal.scss
+++ b/src/components/organisms/VerificationModal/_components.verification-modal.scss
@@ -5,7 +5,8 @@
 
 .buv-c-verification-modal__process {
   display: flex;
-  justify-content: center;
+  width: 50%;
+  margin: 0 auto;
 }
 
 .buv-c-verification-modal__separator {
